# Droidz

./: .gitignore  AGENTS.md  API_KEYS_SETUP.md  ARCHITECTURE_REDESIGN.md  AUTO_WATCH_GUIDE.md  Bug Report minor.md  CHANGELOG.md  CLARIFICATION_HOOKS_VS_AUTOMATIONS.md  CLAUDE-CODE-FRAMEWORK.md  CLAUDE-CODE-MIGRATION.md  CLAUDE.md  CLAUDE_CODE_SETUP.md  CODE_EXECUTION_PATTERN.md  COMMANDS.md  COMPLETE.md  DROIDS.md  DROID_TOOLS_FIX.md  ENHANCEMENT_PLAN.md  FACTORY_AI_INSTALLER_FIX.md  FACTORY_AI_README_REVIEW.md  FACTORY_AI_TOOL_FIXES_SUMMARY.md  FACTORY_AI_VS_CLAUDE_CODE_USAGE.md  FACTORY_VERIFICATION.md  FEATURES.md  FINAL_E2E_TEST_RESULTS.md  HOOKS_SYSTEM_EXPLAINED.md  HOW_TO_USE_DROIDZ.md  IMPLEMENTATION-SUMMARY.md  IMPLEMENTATION_STATUS_TABLE.md  INSTALL.md  INSTALLER_ENHANCEMENTS.md  INSTALLER_FIX.md  INSTALLER_SUMMARY.md  MCP_EXPLAINED.md  MCP_SETUP.md  MIGRATION_V3.md  ORCHESTRATOR_BUG_FIXES.md  ORCHESTRATOR_COMPLETE_GUIDE.md  PARALLEL_EXECUTION_GUIDE.md  PHASE_2_COMPLETE.md  (+51 more)
.claude/: settings.json
.droidz/: MIGRATION_TO_UNIFIED_SPECS.md
.factory/: settings.json
.factory-commands-backup-1763502177/: droidz-init.md
docs/: 2025-11-15-meta-prompting-system-ai-powered-spec-generator-for-droidz.md  2025-11-22-droidz-framework-v3-0-factory-ai-native-architecture-refactor.md  2025-11-22-droidz-v4-0-python-installer-codex-cli-support.md  2025-11-22-simple-dual-installation-separate-droid-cli-claude-code-versions.md  CODEX_CLI.md  CODEX_CLI_RESEARCH.md  CODEX_COMPATIBILITY_BREAKDOWN.md  CODEX_MIGRATION.md  DUAL_MODE_IMPLEMENTATION_SUMMARY.md  INSTALLER_AUDIT.md  (+9 more)
(+388 files in other folders)
